--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
       const botaoInscreva = document.getElementById("btn-inscreva");
       if (botaoInscreva) {
         botaoInscreva.addEventListener("click", function () {
-          window.location.href = "/teste3/teste.html";
+          window.location.href = "../teste3/teste.html";
         });
       }
   
